--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <script src="p5.sound.min.js"></script>
     <script src="matter.js"></script>
 
+    <script src="ground.js"></script>
+    <script src="division.js"></script>
+    <script src="peg.js"></script>
+    <script src="particle.js"></script>
+
     <!--<script src="./p5.play.js"></script>-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
