added the borders

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="matter.js"></script>
 
     <script src="ground.js"></script>
+    <script src="border.js"></script>
     <script src="division.js"></script>
     <script src="peg.js"></script>
     <script src="particle.js"></script>
